<resources>
    <string name="app_name">sjassistant</string>
    <string name="login">登 录</string>
    <string name="serverConfig">服务器配置</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="confirm_config">确认配置</string>
    <string name="validatecode">验证码</string>
    <string name="email">邮箱号</string>
    <string name="findPassword">找回密码</string>
    <string name="confirm">确定</string>
    <string name="message">消息</string>
    <string name="myapplication">应用</string>
    <string name="contacts">通讯录</string>
    <string name="mysetting">个人设置</string>
    <string name="unfinishedWork">待办工作</string>
    <string name="message_inform">消息、通知</string>
    <string name="gonggao">公告</string>
    <string name="assistant">小助理</string>
    <string name="deal">审批工作</string>
    <string name="chat">多方通话</string>
    <string name="company">公司</string>
    <string name="group">小组</string>
    <string name="customer">客户</string>
    <string name="search">搜索联系人</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="work">职务</string>
    <string name="address">地址</string>
    <string name="apartment">部门</string>
    <string name="help">帮助反馈</string>
    <string name="clear">清除后,消息、公告、审批单据、通讯录等文件需要重新加载,确定清除？</string>
    <string name="disturb">开启后,在设定时间段内收到新消息时不会响铃或震动</string>
    <string name="thank">欢迎您对我们提出宝贵的意见和建议,您留下的任何信息都用来改善我们的软件</string>


    <string-array name="test">
        <item>钊钊</item>
        <item>张三</item>
        <item>李四</item>
        <item>哈哈</item>
        <item>么么</item>
        <item>啊啊</item>
        <item>北京</item>
        <item>北边</item>
        <item>Jimmy</item>
        <item>Jokn</item>
        <item>Jokn</item><item>Jokn</item><item>Jokn</item>
    </string-array>

    <string name="warn1">
        该审批环节有必填字段，请在pc端审批
    </string>
    <string name="warn2">
        审批环节需报告盖章，请在Pc端审批
    </string>
    <string name="warn3">
        审批环节需报告贴标，请在pc端审批
    </string>

</resources>