<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_layout"
        layout="@layout/top_layout" />

    <LinearLayout
        android:paddingLeft="12dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/search"
            android:layout_width="22dp"
            android:layout_height="22dp" />

        <EditText
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:hint="@string/search"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="18dp"
        android:id="@+id/company_layout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:src="@drawable/company"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="#4A4A4A"
                android:layout_marginLeft="14dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="17sp"
                android:text="@string/company"
                />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <LinearLayout
        android:id="@+id/group_layout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:src="@drawable/group"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="#4A4A4A"
                android:layout_marginStart="14dp"
                android:textSize="17sp"
                android:layout_marginLeft="14dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <LinearLayout
        android:id="@+id/customer_layout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:src="@drawable/customer"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="#4A4A4A"
                android:layout_marginStart="14dp"
                android:textSize="17sp"
                android:layout_marginLeft="14dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                />
            <ImageView
                android:src="@drawable/right_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>