<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/user_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:layout_toRightOf="@id/user_iv"

                android:hint="用户名"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="17sp"
                 />

            <TextView
                android:id="@+id/prompt"
                android:textColor="@color/red"
                android:text="格式错误"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:contentDescription="@string/app_name"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/user_iv"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/line" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/password_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:layout_toRightOf="@id/password_iv"
                android:password="true"
                android:text=""
                android:hint="密码"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="17sp"
                 />

            <ImageView
                android:id="@+id/eye"
                android:src="@drawable/showpassword"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/password_iv"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/line" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/yuanjiao"
            android:id="@+id/login"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/serverConfig"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/login"
            android:layout_alignLeft="@+id/login"
            android:text="@string/serverConfig"
            android:textColor="@color/my_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/forgetPassword"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/login"
            android:layout_alignRight="@+id/login"
            android:textColor="@color/my_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:layout_marginRight="12dp" />
    </RelativeLayout>
</LinearLayout>
