<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/email_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="23dp"
                android:text=""
                android:hint="@string/email"
                android:singleLine="true"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="17sp"
                />

            <ImageView
                android:id="@+id/prompt"
                android:src="@drawable/right"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/prompt_text"
                android:textColor="@color/red"
                android:text="格式错误"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                />

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            >


            <ImageView
                android:id="@+id/validate_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/validate" />

            <EditText
                android:id="@+id/validateCode"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="23dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text=""
                android:hint="@string/validatecode"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="17sp"
                />

            <TextView
                android:id="@+id/getCode"
                android:background="@color/my_gray"
                android:text="免费获取验证码"
                android:gravity="center"
                android:paddingLeft="9dp"
                android:paddingRight="8dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="20dp">

            <ImageView
                android:id="@+id/password_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_gravity="center_vertical"
                android:inputType="textPassword"
                android:text=""
                android:hint="输入6-12位新密码"
                android:singleLine="true"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="17sp"
                />

            <ImageView
                android:id="@+id/eye"
                android:src="@drawable/showpassword"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                />



        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/yuanjiao"
            android:id="@+id/confirm"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>