<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/top_layout" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/unfinishedwork_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/layout_select"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_unfinish"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/unfinishedword" />

                <TextView
                    android:id="@+id/num_unfinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/iv_unfinish"
                    android:layout_alignTop="@+id/iv_unfinish"
                    android:background="@drawable/red_circle"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/unfinished"
                    style="@style/text1"
                    android:text="@string/unfinishedWork" />

                <TextView
                    android:id="@+id/unfinished_text"
                    style="@style/text2"
                    android:layout_alignLeft="@+id/unfinished"
                    android:layout_alignStart="@+id/unfinished"
                    android:layout_below="@+id/unfinished"
                    android:text="暂时没有待办工作" />

                <TextView
                    android:id="@+id/unfinished_time"
                    style="@style/text3"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_inform_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/layout_select"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/message" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/message_inform"
                    style="@style/text1"
                    android:text="@string/message_inform" />

                <TextView
                    android:id="@+id/message_text"
                    style="@style/text2"
                    android:layout_alignLeft="@+id/message_inform"
                    android:layout_alignStart="@+id/message_inform"
                    android:layout_below="@+id/message_inform"
                    android:text="暂时没有新的消息、通知" />

                <TextView
                    android:id="@+id/message_time"
                    style="@style/text3"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gonggao_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/layout_select"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/gonggao" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/gonggao"
                    style="@style/text1"
                    android:text="@string/gonggao" />

                <TextView
                    android:id="@+id/gonggao_text"
                    style="@style/text2"
                    android:layout_alignLeft="@+id/gonggao"
                    android:layout_alignStart="@+id/gonggao"
                    android:layout_below="@+id/gonggao"
                    android:text="暂时没有新公告" />

                <TextView
                    android:id="@+id/gonggao_time"
                    style="@style/text3"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/assistant_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/layout_select"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/assistant" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/assistant"
                    style="@style/text1"
                    android:text="@string/assistant" />

                <TextView
                    android:id="@+id/assistant_text"
                    style="@style/text2"
                    android:layout_alignLeft="@+id/assistant"
                    android:layout_alignStart="@+id/assistant"
                    android:layout_below="@+id/assistant"
                    android:text="新春佳节" />

                <TextView
                    android:id="@+id/assistant_time"
                    style="@style/text3"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
